[gd_scene load_steps=3 format=3 uid="uid://bg6aty8tbkq0j"]

[ext_resource type="Script" uid="uid://7dbenv41ossr" path="res://file_result_card.gd" id="1_dpgnn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hmito"]
content_margin_left = 10.0
content_margin_top = 8.0
content_margin_right = 10.0
content_margin_bottom = 8.0

[node name="FileResultCard" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hmito")
script = ExtResource("1_dpgnn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusIcon" type="Label" parent="VBoxContainer/HeaderBox"]
layout_mode = 2
text = "üü¢/üî¥"

[node name="SummaryLabel" type="RichTextLabel" parent="VBoxContainer/HeaderBox"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Êñá‰ª∂Âêç - ÈúÄÊ≥®ÊÑè"
fit_content = true

[node name="Spacer" type="Control" parent="VBoxContainer/HeaderBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ToggleButton" type="Button" parent="VBoxContainer/HeaderBox"]
layout_mode = 2
toggle_mode = true
text = "Â±ïÂºÄËØ¶ÊÉÖ ‚ñº"

[node name="DetailsBox" type="RichTextLabel" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
