extends PanelContainer

# ==========================================
# ğŸ“„ FileResultCard.gd (v1.6 Final)
# ==========================================

@onready var status_icon = $VBoxContainer/HeaderBox/StatusIcon
@onready var summary_label = $VBoxContainer/HeaderBox/SummaryLabel
@onready var toggle_btn = $VBoxContainer/HeaderBox/ToggleButton
@onready var details_box = $VBoxContainer/DetailsBox

enum RiskLevel { INFO, WARNING, DANGER, CRITICAL }

func _ready():
	toggle_btn.toggled.connect(_on_toggle)
	details_box.visible = false 
	details_box.fit_content = true 

func _on_toggle(pressed):
	details_box.visible = pressed
	toggle_btn.text = "æ”¶èµ·è¯¦æƒ… â–²" if pressed else "å±•å¼€è¯¦æƒ… â–¼"

func setup(report: Dictionary):
	# 1. è®¡ç®—æœ€é«˜é£é™©ç­‰çº§
	var max_risk = RiskLevel.INFO
	for cat in report["permissions"]:
		for item in report["permissions"][cat]:
			# å¹½çµå¼•ç”¨ä¸å‚ä¸é£é™©è®¡ç®—
			if not item.get("is_ghost", false):
				if item["level"] > max_risk: max_risk = item["level"]
	
	if report.get("is_obfuscated", false): 
		max_risk = RiskLevel.CRITICAL

	# === ğŸ¨ åŠ¨æ€èƒŒæ™¯è‰²é€»è¾‘ ===
	var style_box = get_theme_stylebox("panel").duplicate()
	
	var bg_color = Color("#252525") 
	var border_color = Color("#444444") 
	var status_text = ""
	var icon = ""
	var title_color = "#ffffff"

	if max_risk == RiskLevel.INFO:
		icon = "ğŸ”µ"
		title_color = "#88ccff" 
		status_text = "åŠŸèƒ½å‹ Mod (å®‰å…¨)"
		bg_color = Color("#112233") 
		border_color = Color("#335577") 
		
	elif max_risk == RiskLevel.WARNING:
		icon = "âš ï¸"
		title_color = "orange"
		status_text = "éœ€æ³¨æ„"
		bg_color = Color("#332200") 
		border_color = Color("#775533") 
		
	elif max_risk >= RiskLevel.DANGER:
		icon = "ğŸš«"
		title_color = "#ff4444" 
		status_text = "é«˜é£é™©"
		bg_color = Color("#331111") 
		border_color = Color("#773333") 
		
	else: # çº¯å‡€
		icon = "âœ…"
		title_color = "#44ff44" 
		status_text = "çº¯å‡€ Mod"
		bg_color = Color("#113322") 
		border_color = Color("#337755") 

	style_box.bg_color = bg_color
	style_box.border_width_left = 4
	style_box.border_width_top = 1
	style_box.border_width_right = 1
	style_box.border_width_bottom = 1
	style_box.border_color = border_color
	style_box.corner_radius_top_left = 8
	style_box.corner_radius_top_right = 8
	style_box.corner_radius_bottom_right = 8
	style_box.corner_radius_bottom_left = 8
	add_theme_stylebox_override("panel", style_box)

	# 2. è®¾ç½®é¡¶éƒ¨æ–‡å­—
	status_icon.text = icon
	summary_label.text = "%s  |  [color=%s]%s[/color]" % [report["filename"], title_color, status_text]

	# 3. ç”Ÿæˆè¯¦æƒ…æ–‡æœ¬
	var text = "\n[color=#666666]--- è¯¦ç»†å®¡è®¡æŠ¥å‘Š ---[/color]\n"
	
	if report.get("is_obfuscated", false):
		text += "[color=red]ğŸ² [é«˜å±] ä»£ç æ··ä¹±åº¦æé«˜ (Entropy: %.2f)[/color]\n" % report["entropy"]
		text += "[color=orange]   â””â”€ è­¦å‘Š: æœªæ£€æµ‹åˆ° C# ç‰¹å¾ï¼Œä»£ç å¯èƒ½è¢«åŠ å¯†æˆ–åŠ å£³ã€‚[/color]\n"
	elif report.get("is_resource_heavy", false):
		text += "[color=#eebb00]ğŸ“¦ [ä½“ç§¯è¾ƒå¤§] æ£€æµ‹åˆ°å¤§é‡å†…åµŒèµ„æº (Entropy: %.2f)[/color]\n" % report["entropy"]
		text += "[color=#888888]   â””â”€ æç¤º: ä»£ç ç»“æ„æ¸…æ™°ï¼Œé«˜ç†µå€¼ç”±å›¾ç‰‡/æ•°æ®èµ„æºå¼•èµ·ï¼Œé€šå¸¸å®‰å…¨ã€‚[/color]\n"
	else:
		text += "[color=#44ff44]ğŸ›¡ï¸ ä»£ç ç»“æ„æ¸…æ™° (Entropy: %.2f)[/color]\n" % report["entropy"]
	
	var has_content = false
	for cat in report["permissions"]:
		var items = report["permissions"][cat]
		if items.size() > 0:
			has_content = true
			text += "\n[b]%s æƒé™:[/b]\n" % cat
			for item in items:
				var prefix = "   â€¢ "
				var item_color = "#cccccc"
				
				# ğŸ‘» å¹½çµå¼•ç”¨å¤„ç†
				if item.get("is_ghost", false):
					item_color = "#666666"
					prefix = "   ğŸ‘» "
				elif item["level"] >= RiskLevel.DANGER: 
					item_color = "#ff6666"
					prefix = "   ğŸš« "
				elif item["level"] == RiskLevel.WARNING:
					item_color = "orange"
					prefix = "   âš ï¸ "
				elif item["level"] == RiskLevel.INFO:
					item_color = "#88ccff"
					prefix = "   ğŸ”¹ "
				
				text += "[color=%s]%s%s [color=#666666](%s)[/color][/color]\n" % [item_color, prefix, item["desc"], item["keyword"]]
				
				if item.get("intent_note", "") != "":
					text += "       [color=#ffffaa]â””â”€ ğŸ’¡ %s[/color]\n" % item["intent_note"]
	
	if not has_content and not report.get("is_obfuscated", false):
		text += "\n[i]æœªæ£€æµ‹åˆ°ä»»ä½•æ•æ„Ÿæƒé™è°ƒç”¨ã€‚[/i]"
		
	details_box.text = text
